# AI-travel-Planner

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.dev.example  .env.prod.example  .env.staging.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260509_000001_create_trip_and_job_tables.py  20260509_000002_add_trip_state_and_audit_events.py  20260509_000003_add_workflow_run_steps.py  20260510_000004_add_trip_approval_and_evidence.py  20260602_000005_add_workflow_runs_and_job_runtime_fields.py  20260611_000006_add_users_table.py
backend/evals/: regression_baseline.json
backend/scripts/: load_test.py
backend/src/: bootstrap.py  main.py
backend/src/api/: main.py
backend/src/core/: config.py  logging.py  redaction.py  request_context.py  response_shaping.py  security.py
backend/src/db/: bootstrap.py  models.py  session.py
backend/src/evals/: golden_cases.py  regressions.py  runner.py  scoring.py
backend/src/messaging/: background_jobs.py  redis_queue.py
backend/src/providers/: __init__.py  base.py  factory.py  llm.py  search.py  (+1 more)
backend/tests/: test_api_security.py  test_application_layers.py  test_config.py  test_destination_research_agent.py  test_domain_layers.py  test_eval_suite.py  test_multi_agent_coordination.py  test_observability.py  test_operator_review.py  test_provider_clients.py  test_provider_live_smoke.py  test_reference_links.py  test_runtime_resilience.py  test_tooling_layer.py  test_workflow_runtime.py
(+132 files in other folders)
