[tool.poetry]
name = "travel-planner-backend"
version = "0.1.0"
description = "Backend for Travel Planner Agent"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
alembic = "1.14.0"
fastapi = "0.115.5"
langgraph = "0.2.39"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
psycopg = {version = "3.2.13", extras = ["binary"]}
redis = "5.2.0"
rq = "1.16.2"
sqlalchemy = "2.0.36"
uvicorn = "0.32.0"

[tool.poetry.group.dev.dependencies]
httpx = "0.27.2"
mypy = "1.13.0"
pre-commit = "4.0.1"
pytest = "8.3.3"
ruff = "0.6.9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
follow_imports = "skip"
exclude = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
